[project]
name = "artiq-alkaline"
version = "0.1.0"
description = ""
authors = [
    {name = "anuragborah",email = "anuragborah2548@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "artiq-alkaline"},
    {include = "ndscan"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
