[project]
name = "artiq-alkaline"
version = "0.1.0"
description = ""
authors = [
    {name = "anuragborah",email = "anuragborah2548@gmail.com"}
]
readme = "README.md"

[tools.poetry.dependencies]
python = ">=3.12"
artiq = { git = "https://github.com/lastnameis-borah/artiq-alkaline.git" }
sipyco = { git = "https://github.com/m-labs/sipyco.git" }
ndscan = { git = "https://github.com/lastnameis-borah/ndscan.git" }
artiq-influx-generic = { git = "https://gitlab.com/charlesbaynham/artiq_influx_generic.git" }


[tool.poetry]
packages = [
    {include = "artiq-alkaline"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
